@startuml
hide methods
hide stereotypes

class Movie {
  id: UUID
  title: string
  slug: string
  releaseYear: int
  durationMinutes: int
}

class Genre {
  id: int
  code: string
  label: string
}

class Person {
  id: UUID
  fullName: string
  birthDate: date
}

class Casting {
  id: long
  roleName: string
  billingOrder: int
}

Movie "1" -- "0..*" Casting
Person "1" -- "0..*" Casting
Movie "0..*" -- "0..*" Genre

note bottom of Casting
But: representer les entites metier
Hypothese: un acteur peut avoir plusieurs roles
Limite: pas de contraintes techniques SQL ici
end note
@enduml
